test/algeff/wrong/type1.kk

effect amb {
  flip() : bool
}


function amb_handle() {
  handler {
    return x -> [x]
    flip()   -> [resume(False)]
  }
}
